@@ -1,3 +1,12 @@
+2006-02-16  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* flower/test-file.cc: New file.
+
+	* stepmake/stepmake/test-vars.make (TEST_MODULE_LIBES): Fixes for
+	libraries.
+
+	* flower/GNUmakefile (TEST_MODULE_LIBS): Link to flower lib.
+
 2006-02-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* flower/include/file-storage.hh: remove file.
